force-app/main/default/objects/Draft_Pick__c/Draft_Pick__c.object-meta.xml
<CustomObject>
    <label>Draft Pick</label>
    <pluralLabel>Draft Picks</pluralLabel>
    <nameField>
        <label>Draft Pick Name</label>
        <type>AutoNumber</type>
        <displayFormat>PICK-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>The Draft Pick object tracks each of the 240 slots in the 20-round, 12-team snake draft. It stores Overall Pick number, Round, Pick In Round, and snake-order Draft Position; links the assigned League Member (drafter) and the picked Player (Contact). Commonly used for the draft board display, pick history, and roster reporting.</description>
</CustomObject>