force-app/main/default/objects/Draft_Pick__c/fields/Draft_Season__c.field-meta.xml
<CustomField>
    <fullName>Draft_Season__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Draft Season</label>
    <referenceTo>Draft_Season__c</referenceTo>
    <relationshipLabel>Draft Picks</relationshipLabel>
    <relationshipName>Draft_Picks</relationshipName>
    <type>Lookup</type>
</CustomField>