force-app/main/default/objects/Draft_Pick__c/fields/Is_Picked__c.field-meta.xml
<CustomField>
    <fullName>Is_Picked__c</fullName>
    <label>Is Picked</label>
    <description>Indicates whether a player has been assigned to this pick slot. Drives visual state on the draft board (empty slot vs. filled slot).</description>
    <inlineHelpText>Checked automatically when a player is drafted to this slot. Unchecked means the slot is still available.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>