force-app/main/default/objects/Draft_Pick__c/fields/Is_Upside_Down__c.field-meta.xml
<CustomField>
    <fullName>Is_Upside_Down__c</fullName>
    <label>Is Upside Down</label>
    <description>When checked, the draft board tile for this pick is rendered rotated 180 degrees. A purely cosmetic chaos feature.</description>
    <inlineHelpText>Check this to flip the tile upside down on the draft board.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>