force-app/main/default/objects/Draft_Pick__c/fields/League_Member__c.field-meta.xml
<CustomField>
    <fullName>League_Member__c</fullName>
    <label>League Member</label>
    <description>Lookup to the League Member (team) who owns this pick slot. Auto-assigned by the draftBoard LWC based on Draft Position and Draft Order.</description>
    <inlineHelpText>The team assigned to make this pick. Automatically set by the draft board based on snake order.</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>League_Member__c</referenceTo>
    <relationshipLabel>Draft Picks</relationshipLabel>
    <relationshipName>Draft_Picks</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>