force-app/main/default/objects/Draft_Pick__c/fields/Player__c.field-meta.xml
<CustomField>
    <fullName>Player__c</fullName>
    <label>Player</label>
    <description>Lookup to the Contact record representing the player drafted with this pick. Set by the commissioner or drafter via the draft board when a pick is made.</description>
    <inlineHelpText>Search for the player (Contact) being drafted with this pick.</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Draft Picks</relationshipLabel>
    <relationshipName>Draft_Picks_Player</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>