force-app/main/default/objects/Draft_Pick__c/fields/Trade_Notes__c.field-meta.xml
<CustomField>
    <fullName>Trade_Notes__c</fullName>
    <label>Trade Notes</label>
    <length>1000</length>
    <type>Text</type>
</CustomField>