force-app/main/default/objects/Draft_Pick__c/fields/Traded_To__c.field-meta.xml
<CustomField>
    <fullName>Traded_To__c</fullName>
    <label>Traded To</label>
    <type>Lookup</type>
    <referenceTo>League_Member__c</referenceTo>
    <relationshipLabel>Traded Picks</relationshipLabel>
    <relationshipName>Traded_Picks</relationshipName>
</CustomField>